<resources>

    <!--Standard Strings-->
    <string name="app_name">PUHAN 葡汉</string>
    <string name="slogan">A P R E N D A M A N D A R I M</string>

    <!--Main Activity-->
    <string name="licoes">Lições</string>
    <string name="expressoes">Expressões</string>
    <string name="sobre">sobre o app</string>

    <!--Lessons Activity-->
    <string name="basic_lesson">básico</string>
    <string name="intermediate_lesson">intermediário</string>
    <string name="dialog_title">Em uma galáxia muito distante&#8230;</string>
    <string name="error_fragment">&#8230;algo parece estar errado. 对不起！</string>
    <string name="try_again_button">tentar novamente</string>
    <string name="lesson_description">Lições para o seu Mandarim</string>
    <string name="lesson_description_2">ir mais longe.</string>

</resources>
