<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_puhan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:importantForAccessibility="no"
            android:text="@string/app_name"
            android:textColor="@color/black_000000"
            android:textSize="@dimen/app_name_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_slogan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:importantForAccessibility="no"
            android:text="@string/slogan"
            android:textColor="@color/black_000000"
            android:textSize="@dimen/slogan_size"
            app:layout_constraintEnd_toEndOf="@id/tv_puhan"
            app:layout_constraintStart_toStartOf="@id/tv_puhan"
            app:layout_constraintTop_toBottomOf="@id/tv_puhan" />

        <Button
            android:id="@+id/btn_licoes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:background="@drawable/button_background"
            android:drawableStart="@drawable/ic_book_shelf"
            android:padding="24dp"
            android:text="@string/licoes"
            android:textColor="@color/grey_808080"
            app:layout_constraintEnd_toEndOf="@id/tv_puhan"
            app:layout_constraintStart_toStartOf="@id/tv_puhan"
            app:layout_constraintTop_toBottomOf="@id/tv_slogan" />

        <Button
            android:id="@+id/btn_expressoes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_background"
            android:drawableStart="@drawable/ic_great_wall"
            android:padding="24dp"
            android:text="@string/expressoes"
            android:textColor="@color/grey_808080"
            app:layout_constraintEnd_toEndOf="@id/tv_puhan"
            app:layout_constraintStart_toStartOf="@id/tv_puhan"
            app:layout_constraintTop_toBottomOf="@id/btn_licoes" />

        <Button
            android:id="@+id/btn_sobre_o_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="32dp"
            android:background="@null"
            android:text="@string/sobre"
            android:textAllCaps="false"
            android:textColor="@color/blue_67AECA"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_expressoes" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>